#657: Update OpenJDK to version 21
The redundant Dockerfile has been removed.

This closes https://github.com/cessda/cessda.cdc.versions/issues/657