@@ -69,9 +69,9 @@ public class RecordXMLParserDDI3Test {
         var result = new RecordXMLParser(cmmStudyMapper).getRecord(repo, Path.of(recordXML.toURI()));
 
         then(result).hasSize(1);
-        validateCMMStudyResultAgainstSchema(result.get(0));
+        validateCMMStudyResultAgainstSchema(result.getFirst());
 
-        String actualJson = objectMapper.writeValueAsString(result.get(0));
+        String actualJson = objectMapper.writeValueAsString(result.getFirst());
 
         // Check if the JSON generated differs from the expected source
         assertEquals(expectedJson, actualJson, true);
@@ -87,9 +87,9 @@ public class RecordXMLParserDDI3Test {
         var result = new RecordXMLParser(cmmStudyMapper).getRecord(repo, Path.of(recordXML.toURI()));
 
         then(result).hasSize(1);
-        validateCMMStudyResultAgainstSchema(result.get(0));
+        validateCMMStudyResultAgainstSchema(result.getFirst());
 
-        String actualJson = objectMapper.writeValueAsString(result.get(0));
+        String actualJson = objectMapper.writeValueAsString(result.getFirst());
 
         // Check if the JSON generated differs from the expected source
         assertEquals(expectedJson, actualJson, true);
@@ -97,7 +97,7 @@ public class RecordXMLParserDDI3Test {
 
     private void validateCMMStudyResultAgainstSchema(CMMStudy record) throws IOException, ProcessingException {
         String jsonString = objectMapper.writerWithDefaultPrettyPrinter().writeValueAsString(record);
-        log.debug("RETRIEVED STUDY JSON: \n" + jsonString);
+        log.debug("RETRIEVED STUDY JSON: \n{}", jsonString);
 
 
         JsonSchema schema = JsonSchemaFactory.byDefault().getJsonSchema("resource:/json/schema/CMMStudy.schema.json");
